[package]
name = "wiremock"
version = "0.6.3"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

repository = "https://github.com/LukeMathWalker/wiremock-rs"
documentation = "https://docs.rs/wiremock/"

description = "HTTP mocking to test Rust applications."

keywords = ["test", "http", "mocking", "mock", "black-box"]
categories = ["development-tools", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
serde_json = "1"
serde = "1"
regex = "1"
futures = "0.3.5"
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
tokio = { version = "1.5.0", features = ["rt", "macros"] }
deadpool = "0.10.0"
async-trait = "0.1"
once_cell = "1"
assert-json-diff = "2.0.1"
base64 = "0.22"
url = "2.2"

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
actix-rt = "2.2.0"
serde = { version = "1", features = ["derive"] }
