[package]
name = "wiremock"
version = "0.6.5"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2024"

license = "MIT/Apache-2.0"

repository = "https://github.com/LukeMathWalker/wiremock-rs"
documentation = "https://docs.rs/wiremock/"

description = "HTTP mocking to test Rust applications."

keywords = ["test", "http", "mocking", "mock", "black-box"]
categories = ["development-tools", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
serde_json = "1"
serde = "1"
regex = "1"
futures = "0.3.31"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = [
    "tokio",
    "server",
    "http1",
    "http2",
] }
tokio = { version = "1.47.1", features = ["rt", "macros", "net"] }
deadpool = "0.12.2"
once_cell = "1"
assert-json-diff = "2.0.2"
base64 = "0.22"
url = "2.5"

[dev-dependencies]
async-std = { version = "1.13.2", features = ["attributes", "tokio1"] }
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
actix-rt = "2.10.0"
serde = { version = "1", features = ["derive"] }
